# 2023Markthesis

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: 2022-03-PingTung  2022-03-pingTung-tracking-val  annotated-dataset-lidar1  modest_data  nuscenes-wayside-format  pcd-files-lidar1
data/pcd-files-lidar1-mini/: 000500.pcd  000501.pcd  000502.pcd  000503.pcd  000504.pcd  000505.pcd  000506.pcd  000507.pcd  000508.pcd  000509.pcd  000510.pcd  000511.pcd  000512.pcd  000513.pcd  000514.pcd  000515.pcd  000516.pcd  000517.pcd  000518.pcd  000519.pcd  000520.pcd  000521.pcd  000522.pcd  000523.pcd  000524.pcd  000525.pcd  000526.pcd  000527.pcd  000528.pcd  000529.pcd  000530.pcd  000531.pcd  000532.pcd  000533.pcd  000534.pcd  000535.pcd  000536.pcd  000537.pcd  000538.pcd  000539.pcd  (+60 more)
exp/: env.sh
exp/bash_sources/: bash_opts.sh  config.sh  job.sh  parallel_exec.sh
exp/mark-exp/: 0606-log.txt  2024-03-iros_exp.sh  Makefile  README.md  cache-pcd-cluster.sh  cache-pcd-process.sh  centerpoint-detect-from-pcd-files-lidar1.sh  clean.sh  clustering-detect-from-cache.sh  dbscan-from-nuscenes.sh  dbscan-from-pcd-files.sh  dbscan_from_nuscenes.sh  erl_crash.dump  kitti-seq-json5.py  learning-based-detect-from-cache.sh  learning-based-detect-from-pcd-files.sh  loop.sh  matcher-to-data-writer.sh  occai-to-pcd-files.sh  pointrcnn-from-pcd-files-lidar1.sh  pvrcnn-detect-from-kitti.sh  pvrcnn-detect-from-nuscenes-wayside.sh  pvrcnn-detect-from-pcd-files.sh  run_all.sh  run_tracking.sh  run_tracking_from_cluster_cache.sh  self-training-nusc-round-i.sh  test.sh  (+5 more)
(+72 files in other folders)
