[tool.poetry]
name = "2023markmasterthesis"
version = "0.1.0"
description = ""
authors = ["mark <yahoo55025502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.5.0"
json5 = "^0.9.14"
nuscenes-devkit = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
